# Advent-Of-Code

./: .gitignore  README.md
2020_advent_of_code/: 20_1.txt  20_10.txt  20_10a.py  20_10b.py  20_11a.py  20_11b.py  20_12.txt  20_12a.py  20_12b.py  20_1a.py  20_1b.py  20_2a.py  20_2b.py  20_3a.py  20_3b.py  20_4.txt  20_4a.py  20_4b.py  20_5a.py  20_5b.py  20_6.txt  20_6a.py  20_6b.py  20_7_moretest.txt  20_7a.py  20_7b.py  20_8a.py  20_8b.py  20_9a.py  20_9b.py
2021/: aoc_day10a.py  aoc_day12a.py  aoc_day12b.py  aoc_day13b.py  aoc_day14a.py  aoc_day15a.py  aoc_day15b.py  aoc_day15b_ans.py  aoc_day15b_tryagain.py  aoc_day16a.py  aoc_day16b.py  aoc_day18a.py  aoc_day18a_alsofailed.py  aoc_day18a_failed.py  aoc_day19a.py  aoc_day2a.py  aoc_day3a.py  aoc_day3b.py  aoc_day4a.py  aoc_day5a.py  aoc_day6a.py  aoc_day7_optimal.py  aoc_day7a_optimal.py  aoc_day7b.py  aoc_day7b_testing.py  aoc_day8a.py  aoc_day9b.py
2021_advent_of_code/: aoc_day10a.py  aoc_day10b.py  aoc_day11a.py  aoc_day11b.py  aoc_day12a.py  aoc_day12b.py  aoc_day13.txt  aoc_day13a.py  aoc_day13b.py  aoc_day14.txt  aoc_day14a.py  aoc_day14b.py  aoc_day15.txt  aoc_day15a.py  aoc_day15b.py  aoc_day15b_ans.py  aoc_day15b_tryagain.py  aoc_day16a.py  aoc_day16b.py  aoc_day17a.py  aoc_day18_test.txt  aoc_day18a.py  aoc_day18a_alsofailed.py  aoc_day18a_failed.py  aoc_day19a.py  aoc_day1a.py  aoc_day1b.py  aoc_day2a.py  aoc_day2b.py  aoc_day3a.py  aoc_day3b.py  aoc_day4a.py  aoc_day4b.py  aoc_day5a.py  aoc_day6a.py  aoc_day7_optimal.py  aoc_day7a.py  aoc_day7a_optimal.py  aoc_day7b.py  (+6 more)
2024/14/: Cargo.toml
(+120 files in other folders)
