[package]
name = "aoc-2024-XX"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
glam = "0.29.2"
itertools = "0.13.0"
miette = { version = "7.4.0", features = ["fancy"] }
nom = "7.1.3"
rayon = "1.10.0"
regex = "1.11.1"
